cmake_minimum_required(VERSION 3.22)
project(CppAndPython)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppAndPython
        Algorithm/LeetCode_ChallengeCup/334th_Week/B_L6417.cpp
        Algorithm/LeetCode_ChallengeCup/334th_Week/C_L6418.cpp
        Algorithm/LeetCode_Attendance/3_10_L429.cpp Algorithm/LeetCode_Attendance/3_11_L226.cpp)
